# nowledge-iface

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
nowledge_iface/: extractor.py
nowledge_iface/v1/: __init__.py  plugin.py  reader.py
test/: test_nowledge_iface.py
tests/: test_nowledge_iface.py
