[tool.poetry]
name = "nowledge-iface"
version = "0.1.0"
description = "Interface definitions for nowledge plugins to adjust to"
authors = ["emkor93 <emkor93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
